# micro-games-kit

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
examples/: hello_world.rs  path.rs  pcg.rs  pcg_island.rs  scripting.rs  spine.rs
resources/: Config.toml  player.simp  robot.atlas  robot.json
resources/spine/: robot.spine
src/: animation.rs  assets.rs  audio.rs  character.rs  config.rs  context.rs  game.rs  game_object.rs  gamepad.rs  grid_world.rs  lib.rs  loader.rs  nodes.rs  pcg.rs  scripting.rs  tag.rs
src/animation/: frame.rs  mod.rs  spine.rs
src/assets/: atlas.rs  font.rs  mod.rs  shader.rs  sound.rs  spine.rs  texture.rs
templates/fresh-start/: Cargo.toml  Cargo.toml.chrobry  index.html  justfile  justfile.chrobry
templates/fresh-start/src/: game.rs  game.rs.chrobry  lib.rs  main.rs
templates/fresh-start/src/game/: mod.rs
templates/fresh-start/src/game/states/: gameplay.rs
templates/fresh-start/src/states/: gameplay.rs
templates/top-down/: .gitignore  Cargo.toml  Cargo.toml.chrobry  build.rs  index.html  justfile
templates/top-down/assets/maps/: world.ldtk
templates/top-down/assets/maps/world/simplified/Level_0/: Grass.csv  StoneGround.csv  data.json
templates/top-down/assets/shaders/: character.glsl  lighting.glsl  sphere_light.glsl
templates/top-down/src/: lib.rs  main.rs
templates/top-down/src/game/: animation.rs  character.rs  game_object.rs  item.rs  mod.rs  torch.rs
templates/top-down/src/game/drawables/: light.rs
templates/top-down/src/game/enemy/: conditions.rs  mod.rs
templates/top-down/src/game/enemy/ai/: mod.rs  pursue.rs  wait.rs  wander.rs
templates/top-down/src/game/enemy/tasks/: attack.rs  idle.rs  mod.rs  run.rs
templates/top-down/src/game/player/: conditions.rs  mod.rs
templates/top-down/src/game/player/tasks/: attack_axe.rs  attack_bow.rs  attack_sword.rs  idle.rs  mod.rs  run.rs
templates/top-down/src/game/states/: game_end.rs  gameplay.rs  main_menu.rs  mod.rs  preloader.rs
templates/top-down/src/game/ui/: health_bar.rs  mod.rs  text_button.rs
templates/top-down/src/game/utils/: audio.rs  events.rs  mod.rs  space.rs
