[workspace]
members = ["templates/*"]

[package]
name = "micro-games-kit"
version = "0.25.0"
edition = "2021"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
description = "Micro Games Kit"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/PsichiX/micro-games-kit"
repository = "https://github.com/PsichiX/micro-games-kit"
documentation = "https://docs.rs/micro-games-kit"
readme = "README.md"
exclude = ["resources/", "templates/"]

[dependencies]
spitfire-core = "0.28"
spitfire-glow = "0.28"
spitfire-fontdue = "0.28"
spitfire-draw = "0.28"
spitfire-input = "0.28"
spitfire-gui = "0.28"
raui-core = "0.63"
raui-immediate = "0.63"
raui-immediate-widgets = "0.63"
emergent = "1.7"
typid = "1"
image = "0.24"
fontdue = "0.8"
vek = "0.16"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
noise = "0.8"
rand = "0.8"
kira = "0.8"
rstar = "0.11"
gilrs = "0.10"
anim8 = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
winit = "0.26"
instant = { version = "0.1", features = ["wasm-bindgen"] }
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
glutin = "0.28"
