[workspace]
members = ["templates/*"]

[package]
name = "micro-games-kit"
version = "0.31.4"
edition = "2021"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
description = "Micro Games Kit"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/PsichiX/micro-games-kit"
repository = "https://github.com/PsichiX/micro-games-kit"
documentation = "https://docs.rs/micro-games-kit"
readme = "README.md"
exclude = ["resources/", "templates/"]

[dependencies]
spitfire-core = "0.29"
spitfire-glow = "0.29"
spitfire-fontdue = "0.29"
spitfire-draw = "0.29"
spitfire-input = "0.29"
spitfire-gui = "0.29"
raui-core = "0.65"
raui-immediate = "0.65"
raui-immediate-widgets = "0.65"
intuicio-data = "0.44"
intuicio-core = "0.44"
intuicio-derive = "0.44"
intuicio-backend-vm = "0.44"
intuicio-frontend-simpleton = { version = "0.44", default-features = false }
anput = "0.10"
nodio = "0.1"
keket = "0.12"
emergent = "1.7"
typid = "1"
image = "0.25"
fontdue = "0.9"
vek = "0.17"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
noise = "0.9"
rand = "0.8"
kira = "0.9"
rstar = "0.12"
gilrs = "0.11"
anim8 = "1.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
winit = "0.28"
instant = { version = "0.1", features = ["wasm-bindgen"] }
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
glutin = "0.28"
getrandom = { version = "0.2" }
