[workspace]
members = ["templates/*"]

[package]
name = "micro-games-kit"
version = "0.34.3"
edition = "2021"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
description = "Micro Games Kit"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/PsichiX/micro-games-kit"
repository = "https://github.com/PsichiX/micro-games-kit"
documentation = "https://docs.rs/micro-games-kit"
readme = "README.md"
exclude = ["resources/", "templates/"]

[dependencies]
spitfire-core = "0.30"
spitfire-glow = "0.30"
spitfire-fontdue = "0.30"
spitfire-draw = "0.30"
spitfire-input = "0.30"
spitfire-gui = "0.30"
raui-core = "0.65"
raui-immediate = "0.65"
raui-immediate-widgets = "0.65"
intuicio-data = "0.44"
intuicio-core = "0.44"
intuicio-derive = "0.44"
intuicio-backend-vm = "0.44"
intuicio-frontend-simpleton = { version = "0.44", default-features = false }
anput = "0.10"
nodio = "0.3"
keket = "0.12"
emergent = "1.7"
typid = "1"
image = "0.25"
fontdue = "0.9"
vek = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
toml = "0.8"
noise = "0.9"
rand = "0.8"
kira = "0.9"
rstar = "0.12"
gilrs = "0.11"
anim8 = "1.1"
rusty_spine = "0.8"
zip = { version = "2", default-features = false, features = ["deflate"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
winit = "0.28"
instant = { version = "0.1", features = ["wasm-bindgen"] }
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
glutin = "0.28"
getrandom = { version = "0.2" }
