[package]
name = "top-down"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "game_web"
crate-type = ["cdylib"]

[dependencies.micro-games-kit]
version = "0.30"
path = "../.."

[build-dependencies.micro-games-kit]
version = "0.30"
path = "../.."

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
